--- a/package.json
+++ b/package.json
@@ -5,12 +5,15 @@
   "homepage": ".",
   "dependencies": {
     "antd": "^3.21.2",
-    "antd-mobile": "^2.2.12",
+    "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
+    "fetch-jsonp": "^1.1.3",
+    "jquery": "^3.4.1",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
+    "react-router-dom": "^5.1.0",
     "react-scripts": "3.0.1",
-    "react-zmage": "^0.7.1",
+    "react-zmage": "^0.7.6",
     "url": "^0.11.0"
   },
   "scripts": {
