--- a/package.json
+++ b/package.json
@@ -4,11 +4,12 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "antd": "^3.21.2",
+    "antd": "^3.23.5",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "fetch-jsonp": "^1.1.3",
     "jquery": "^3.4.1",
+    "moment": "^2.24.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6",
     "react-router-dom": "^5.1.0",
