--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "axios": "^0.19.0",
     "fetch-jsonp": "^1.1.3",
     "jquery": "^3.4.1",
+    "jsonp": "^0.2.1",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.0.1",
     "react-zmage": "^0.7.6",
+    "store": "^2.0.12",
     "url": "^0.11.0"
   },
   "scripts": {
@@ -38,5 +40,5 @@
       "last 1 safari version"
     ]
   },
-  "proxy":"http://localhost:5000"
+  "proxy": "http://localhost:5000"
 }
