--- a/package.json
+++ b/package.json
@@ -4,6 +4,7 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
+    "@ant-design/compatible": "^1.0.5",
     "antd": "^4.5.2",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
