--- a/package.json
+++ b/package.json
@@ -8,12 +8,16 @@
     "antd": "^4.5.2",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
+    "draft-js": "^0.11.7",
+    "draftjs-to-html": "^0.9.1",
     "fetch-jsonp": "^1.1.3",
+    "html-to-draftjs": "^1.5.0",
     "jquery": "^3.4.1",
     "jsonp": "^0.2.1",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.1",
+    "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.0.1",
     "react-zmage": "^0.7.6",
