--- a/package.json
+++ b/package.json
@@ -18,9 +18,13 @@
     "react": "^16.13.0",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
+    "react-redux": "^7.2.1",
     "react-router-dom": "^5.1.0",
     "react-scripts": "3.0.1",
     "react-zmage": "^0.7.6",
+    "redux": "^4.0.5",
+    "redux-devtools-extension": "^2.13.8",
+    "redux-thunk": "^2.3.0",
     "store": "^2.0.12",
     "url": "^0.11.0"
   },
