--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "axios": "^0.19.0",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
+    "echarts": "^4.9.0",
     "fetch-jsonp": "^1.1.3",
     "html-to-draftjs": "^1.5.0",
     "jquery": "^3.4.1",
