--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "html-to-draftjs": "^1.5.0",
     "jquery": "^3.4.1",
     "jsonp": "^0.2.1",
+    "less": "^3.9.0",
+    "less-loader": "^5.0.0",
     "moment": "^2.24.0",
     "react": "^16.13.0",
     "react-dom": "^16.13.1",
