--- a/package.json
+++ b/package.json
@@ -4,23 +4,25 @@
   "private": true,
   "homepage": ".",
   "dependencies": {
-    "@ant-design/compatible": "^1.0.5",
-    "antd": "^4.5.2",
-    "antd-mobile": "^2.3.1",
-    "axios": "^0.19.0",
+    "@ant-design/compatible": "^1.0.8",
+    "antd": "^4.11.2",
+    "antd-mobile": "^2.3.4",
+    "axios": "^0.19.2",
     "draft-js": "^0.11.7",
     "draftjs-to-html": "^0.9.1",
     "echarts": "^4.9.0",
+    "echarts-for-react": "^2.0.16",
     "fetch-jsonp": "^1.1.3",
     "html-to-draftjs": "^1.5.0",
-    "jquery": "^3.4.1",
+    "jquery": "^3.5.1",
     "jsonp": "^0.2.1",
-    "moment": "^2.24.0",
-    "react": "^16.13.0",
-    "react-dom": "^16.13.1",
+    "moment": "^2.29.1",
+    "prop-types": "^15.7.2",
+    "react": "^16.14.0",
+    "react-dom": "^16.14.0",
     "react-draft-wysiwyg": "^1.14.5",
-    "react-redux": "^7.2.1",
-    "react-router-dom": "^5.1.0",
+    "react-redux": "^7.2.2",
+    "react-router-dom": "^5.2.0",
     "react-scripts": "3.0.1",
     "react-zmage": "^0.7.6",
     "redux": "^4.0.5",
