--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "dependencies": {
     "@ant-design/compatible": "^1.0.5",
     "antd": "^4.5.2",
+    "antd-img-crop": "^4.2.5",
     "antd-mobile": "^2.3.1",
     "axios": "^0.19.0",
     "draft-js": "^0.11.7",
@@ -16,8 +17,10 @@
     "jsonp": "^0.2.1",
     "less": "^3.9.0",
     "less-loader": "^5.0.0",
+    "lodash": "^4.17.21",
     "moment": "^2.24.0",
     "react": "^16.13.0",
+    "react-cropper": "^2.1.8",
     "react-dom": "^16.13.1",
     "react-draft-wysiwyg": "^1.14.5",
     "react-router-dom": "^5.1.0",
