--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "react-scripts": "3.0.1",
     "react-zmage": "^0.7.6",
     "store": "^2.0.12",
-    "url": "^0.11.0"
+    "url": "^0.11.0",
+    "video.js": "^8.0.4"
   },
   "scripts": {
     "start": "react-scripts start",
